compiler/tests/fail/common/storage_signature_mismatch.jazz
inline fn sum (stack u64[2] a) -> stack u64 {
  reg u64 r;
  
  r = a[0];
  r += a[1];
    
  return r;
}
